--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,10 +8,13 @@
 -->
 
 <resources>
-
     <string name="app_name">CandyWrappers</string>
     <string name="action_apply">Apply sweetness...</string>
     <string name="applying">Applying selected sweetness...</string>
-
+    <string name="longpress_info">Long press to apply wallpaper</string>
+    <string name="wallpaper_instructions">Set wallpaper</string>
+    <string name="wallpaper_option_home_screen">Home screen</string>
+    <string name="wallpaper_option_lock_screen">Lock screen</string>
+    <string name="wallpaper_option_home_screen_and_lock_screen">Both</string>
 </resources>
 
